Added javascript for navigation, footer, buttons

--- a/Books/TheWayOfKings/AboveSilence/prologue.html
+++ b/Books/TheWayOfKings/AboveSilence/prologue.html
@@ -10,41 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/crown.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/crown.ico" />
     <link rel="stylesheet" href="../../../css/style.css" />
-    <!-- <script defer src="js/grid.js" type="text/javascript"></script> -->
+    <script type="module" src="/js/controller.js"></script>
   </head>
   <body>
-    <nav class="navigation">
-      <span class="navigation__edge"></span>
-      <span class="navigation__main">
-        <ul class="navigation__list">
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Home</a>
-          </li>
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link navigation__link-active">
-              Books
-            </a>
-          </li>
-          <li class="navigation__list-item">
-            <a
-              href="Books/TheWayOfKings/AboveSilence/prologue.html"
-              class="navigation__link"
-            >
-              Characters
-            </a>
-          </li>
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Questions</a>
-          </li>
-          <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Theories</a>
-          </li>
-        </ul>
-      </span>
-      <span class="navigation__edge"></span>
-    </nav>
+    <nav class="navigation"></nav>
 
     <header class="header__chapter">
       <h1 class="heading-primary u-center-text u-margin-bottom-small">
@@ -59,5 +30,7 @@
         years. The child did not survive.
       </p>
     </header>
+
+    <footer class="footer"></footer>
   </body>
 </html>
