--- a/index.html
+++ b/index.html
@@ -10,12 +10,50 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/crown.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/crown.ico" />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer src="js/navigationLoader.js" type="text/javascript"></script>
+    <!-- <script defer src="js/navigationLoader.js" type="text/javascript"></script>
+    <script defer src="js/footerLoader.js" type="text/javascript"></script> -->
   </head>
   <body>
-    <nav class="navigation"></nav>
+    <nav class="navigation">
+      <span class="navigation__edge"></span>
+      <span class="navigation__main">
+        <ul class="navigation__list">
+          <li class="navigation__list-item">
+            <div class="navigation__dropdown-menu">
+              <a href="/" class="navigation__link navigation__link-active">
+                Home
+              </a>
+              <div class="navigation__dropdown-content">
+                <a href="" class="navigation__dropdown-link">a</a>
+                <a href="" class="navigation__dropdown-link">b</a>
+                <a href="" class="navigation__dropdown-link">c</a>
+                <a href="" class="navigation__dropdown-link">d</a>
+              </div>
+            </div>
+          </li>
+          <li class="navigation__list-item">
+            <a
+              href="Books/TheWayOfKings/AboveSilence/prologue.html"
+              class="navigation__link"
+            >
+              Books
+            </a>
+          </li>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Characters</a>
+          </li>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Questions</a>
+          </li>
+          <li class="navigation__list-item">
+            <a href="#" class="navigation__link">Theories</a>
+          </li>
+        </ul>
+      </span>
+      <span class="navigation__edge"></span>
+    </nav>
 
     <header class="header">
       <h1 class="heading-primary u-center-text">The Way Of Kings</h1>
@@ -24,15 +62,39 @@
       </p>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <div class="btn__container">
+        <a href="#" class="btn__previous">Back</a>
+        <a href="#" class="btn__next">Forward</a>
+      </div>
+    </main>
 
     <footer class="footer">
       <div class="footer__grid">
-        <span class="footer__title">Home</span>
-        <span class="footer__title">Books</span>
-        <span class="footer__title">Characters</span>
-        <span class="footer__title">Questions</span>
-        <span class="footer__title">Theories</span>
+        <div class="footer__column">
+          <span class="footer__title">Home</span>
+        </div>
+        <div class="footer__column">
+          <span class="footer__title">Books</span>
+          <ul footer__list>
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">The Way of Kings</a>
+            </li>
+            <li class="footer__list-item"></li>
+            <li class="footer__list-item"></li>
+            <li class="footer__list-item"></li>
+            <li class="footer__list-item"></li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <span class="footer__title">Characters</span>
+        </div>
+        <div class="footer__column">
+          <span class="footer__title">Questions</span>
+        </div>
+        <div class="footer__column">
+          <span class="footer__title">Theories</span>
+        </div>
       </div>
     </footer>
   </body>
