--- a/sample.html
+++ b/sample.html
@@ -12,8 +12,7 @@
     />
     <link rel="icon" type="image/png" sizes="16x16" href="/images/crown.ico" />
     <link rel="stylesheet" href="/css/style.css" />
-    <script defer src="/js/navigationLoader.js" type="text/javascript"></script>
-    <script defer src="/js/footerLoader.js" type="text/javascript"></script>
+    <script type="module" src="/js/controller.js"></script>
   </head>
   <body>
     <nav class="navigation"></nav>
@@ -45,6 +44,21 @@
         <li class="chapter__list-item"></li>
         <li class="chapter__list-item"></li>
       </ul>
+
+      <ul class="chapter__question">
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item"></li>
+      </ul>
+
+      <div class="btn__container"></div>
     </main>
     <footer class="footer"></footer>
   </body>
