Changes to make site more viable

--- a/Books/TheWayOfKings/AboveSilence/prologue.html
+++ b/Books/TheWayOfKings/AboveSilence/prologue.html
@@ -31,6 +31,10 @@
       </p>
     </header>
 
+    <main class="chapter">
+      <div class="btn__container"></div>
+    </main>
+
     <footer class="footer"></footer>
   </body>
 </html>
