--- a/Books/WordsOfRadiance/Prologue.html
+++ b/Books/WordsOfRadiance/Prologue.html
@@ -22,15 +22,29 @@
     </header>
 
     <main class="chapter">
+      <div class="btn__container"></div>
       <ul class="chapter__list">
         <li class="chapter__list-item">
           Jasnah Kholin pretended to enjoy the party, giving no indication that
           she intended to have one of the guests killed.
         </li>
-        <li class="chapter__list-item"></li>
-        <li class="chapter__list-item"></li>
-        <li class="chapter__list-item"></li>
-        <li class="chapter__list-item"></li>
+        <li class="chapter__list-item">
+          Jasnah turned away from the high table and continued through the room.
+          She had an appointment with an unknown assassin.
+        </li>
+        <li class="chapter__list-item">
+          Everyone expected Dalinar to lose himself to wine during a feast—but
+          the king’s daughter, admitting to heresy? That was unprecedented.
+        </li>
+        <li class="chapter__list-item">
+          She passed the Parshendi delegation, which clustered near the high
+          table, talking in their rhythmic language. Though this celebration
+          honored them and the treaty they’d signed with Jasnah’s father, they
+          didn’t look festive or even happy. They looked nervous.
+        </li>
+        <li class="chapter__list-item">
+          Her shadow was pointing in the wrong direction.
+        </li>
         <li class="chapter__list-item"></li>
         <li class="chapter__list-item"></li>
         <li class="chapter__list-item"></li>
@@ -49,7 +63,9 @@
       </ul>
 
       <ul class="chapter__question">
-        <li class="chapter__question-item"></li>
+        <li class="chapter__question-item">
+          Why does Jasnah want someone killed?
+        </li>
         <li class="chapter__question-item"></li>
         <li class="chapter__question-item"></li>
         <li class="chapter__question-item"></li>
