--- a/sample.html
+++ b/sample.html
@@ -22,6 +22,8 @@
     </header>
 
     <main class="chapter">
+      <div class="btn__container"></div>
+
       <ul class="chapter__list">
         <li class="chapter__list-item"></li>
         <li class="chapter__list-item"></li>
